css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  font-size: 16px;
}

body {
  background-image: url(../img/background.jpg);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  background-attachment: fixed;
  background-color: steelblue;
  height: 100%;
  width: 100%;
  min-height: 100vh;
  min-width: 100vw;
  font-family: "Roboto", sans-serif;
  display: flex;
  justify-content: center;
  color: #fff;
}

a {
  color: #fff;
  text-decoration: none;
}

a:hover {
  opacity: 0.7;
}

h1 {
  font-size: 2.5rem;
  padding-bottom: 2.5rem;
}

p {
  padding-bottom: 2.5rem;
}

nav {
  position: absolute;
  top: 0;
  width: 100%;
  max-width: 1200px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 2rem;
  z-index: 1000;
}

nav li {
  list-style-type: none;
  width: 100%;
  font-size: 1rem;
  text-transform: uppercase;
  padding-left: 1rem;
  display: inline;
}

nav img {
  max-width: 13rem;
}

.fas {
  display: none;
  font-size: 2rem;
}

.container {
  width: 100%;
  display: flex;
  justify-content: center;
}

main {
  max-width: 1200px;
  width: 100%;
  height: 100%;
  padding: 2rem 2rem 0 2rem;
  display: inline-flex;
  margin-top: 8rem;
  flex-wrap: wrap;
}

aside {
  width: 50%;
  display: flex;
  flex-direction: column;
  padding-right: 5rem;
  margin-top: 7rem;
}

.phone-pics {
  width: 50%;
  height: 100%;
  margin-bottom: 2rem;
}

.pics {
  width: 100%;
  position: relative;
  height: 100%;
}

.pics img {
  max-height: 600px;
  max-width: 50vw;
}

.phone1 {
  position: absolute;
  top: 0;
  right: 3rem;
}

.phone2 {
  z-index: 100;
  position: absolute;
  top: 1rem;
}

.button-holder {
  display: inline-flex;
  width: 100%;
  justify-content: space-between;
}

.button-holder button {
  width: 40%;
  height: 3rem;
  font-size: 1.2rem;
  background-color: #29be56;
  border: 0;
  color: #fff;
  margin-right: 1rem;
  border-radius: 0.3rem;
}

.button-holder button:nth-child(even) {
  background-color: #3498db;
}

@media only screen and (max-width: 825px) {
  .button-holder button {
    font-size: 0.8rem;
  }

  aside {
    margin-top: 4rem;
  }
}

@media only screen and (max-width: 750px) {
  nav ul {
    display: none;
  }

  .fas {
    display: block;
  }

  aside,
  .phone-pics {
    width: 100%;
  }

  aside {
    margin: 2rem 0 4rem 0;
    padding: 0;
  }
}

